--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -3,10 +3,13 @@ nav {
     background-color: #540B51;
     display: flex;
     padding: 3px;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 90%; /* Full width */
 }
 
 .largeImages {
-    width: 90%;
+    width: 100%;
 }
 
 .navButtons {
@@ -261,7 +264,7 @@ header span1 {
     font-weight: bold;
 }
 
-/* section 5 */
+/* section 6 */
 
 .section6 {
     background-color: #540B51;
@@ -269,7 +272,6 @@ header span1 {
     flex-direction: column;
     align-items: center;
     padding-bottom: 100px;
-    
     border-bottom-left-radius: 50% 30%;
     border-bottom-right-radius: 50% 30%;
 }
@@ -279,11 +281,71 @@ header span1 {
     flex-direction: column;
 }
 
-.buttonTry {
-    
+.buttonTalk2 {
+    color: white;
+    border-style: none;
+    border: 1px solid white;
+    background-color: #540B51;
+    padding: 8px 120px 8px 120px;
+    border-radius: 2px; 
+    margin-bottom: 10px;
 }
 
 
+.buttonTry {
+    color: #540B51;
+    border-style: none;
+    border: 1px solid white;
+    background-color: white;
+    padding: 8px 120px 8px 120px;
+    border-radius: 2px;
+}
+
+footer {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.imageIsoSlack {
+    width: 12%;
+}
+
+.uLists {
+    display: flex;
+    font-size: 0.8rem;
+    border-bottom: solid darkgray;
+}
+
+.uLists ul {
+    list-style: none;
+}
+
+.headList {
+    font-weight: bold;
+    padding-bottom: 8px;
+}
+
+
+.lastList {
+    list-style: none;
+    font-weight: bold;;
+}
+
+.lastList li {
+    padding-bottom: 20px;
+}
+
+.socialMediaList {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+.small {
+    text-align: center;
+    margin-bottom: 30px;
+}
 
 
 
