--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -59,33 +59,37 @@ header span1 {
     align-items: center;
 }
 
-.divHeaderButtons button {
-    width: 90%;
-    margin: 5px;
-    height: 20%;
-}
+
 
 .buttonSignUp {
     color: #540B51;
-    padding: 12px;
+    border-style: none;
+    border: 1px solid white;
+    background-color: white;
+    padding: 8px 100px 8px 100px;
+    border-radius: 2px;
     font-weight: bold;
     font-variant:small-caps;
+    margin-bottom: 9px;
 }
+
 
 .buttonGoogle {
     border-style: none;
     background-color: #4285F4;
     font-weight: bold; 
     font-variant:small-caps;
+    border-radius: 2px;
     display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 5px;
+    
+    align-items: center; 
+    padding: 4px 80px 4px 80px;
+    margin-bottom: 20px;
     
 }
 
 .buttonGoogle span{
-    padding-left: 65px;
+    padding-left: 0px;
     color: white;
 }
 
@@ -274,6 +278,11 @@ header span1 {
     padding-bottom: 100px;
     border-bottom-left-radius: 50% 30%;
     border-bottom-right-radius: 50% 30%;
+}
+
+.section6 h3 {
+    text-align: center;
+    color: white;
 }
 
 .buttonsSection6 {
