--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -5,7 +5,7 @@ nav {
     padding: 3px;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
-    width: 90%; /* Full width */
+    width: 100%; /* Full width */
 }
 
 .largeImages {
@@ -14,7 +14,7 @@ nav {
 
 .navButtons {
     display: flex;
-    
+    padding-right: 50px;
 }
 
 .navButtons button {
@@ -355,6 +355,27 @@ footer {
     text-align: center;
     margin-bottom: 30px;
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    header {
+        display: flex;
+    }
+
+    .leftSite {
+        width: 1000px;
+        padding-left: 30px;
+        margin-right: 30px;
+    }
+    .logos {
+        display: flex;
+    }
+    .logos img {
+        width: 60px;
+    }
+}
+
+
+
 
 
 
